[gd_scene load_steps=5 format=3 uid="uid://douwhauypuvum"]

[ext_resource type="Script" path="res://spinning_turret.gd" id="1_silp2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wn0m7"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8ig3a"]
albedo_color = Color(0.0768358, 0.0768358, 0.0768358, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_i6o1x"]
radius = 10.0

[node name="SpinningTurret" type="CharacterBody3D" groups=["enemy"]]
collision_layer = 9
script = ExtResource("1_silp2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_wn0m7")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
operation = 1

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -0.666651)
size = Vector3(0.5, 0.5, 0.6)
material = SubResource("StandardMaterial3D_8ig3a")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_i6o1x")

[node name="PlayerPos" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.39495, -4.74153)

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
